<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- NestedScrollView for full scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Title -->
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dicoding_event"
                android:textSize="24sp"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:textStyle="bold"/>

            <!--Upcoming EventsTitle -->
            <TextView
                android:id="@+id/tvUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_event"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp" />

            <ProgressBar
                android:id="@+id/progressBarUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <!-- RecyclerView for Upcoming Events (Horizontal) -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_event" />

            <!-- Upcoming Events Title -->
            <TextView
                android:id="@+id/tvFinishedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp" />

            <ProgressBar
                android:id="@+id/progressBarFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <!-- RecyclerView for Finished Events (Vertical) -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFinishedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/item_event" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>